# CO2-injection-simulation

./: .gitignore  Cargo.toml  README.md  generate_animations.py  prepare_rust_debugging.sh  pyproject.toml  pyrightconfig.json  reinstall_backend.sh  ruff.toml  run_and_animate.sh  simulation.py  test.py
rust_backend/: Cargo.toml.bak
rust_backend/src/: datastucture.rs  injection_simulation.rs  lib.rs  utils.rs
scripts/: generate_animations.py  run_simuation.rs  setup_domain.py  simulation.py
src/co2_injection_simulation/: __init__.py  injection_simulation.py  leakage_model.py  model.py  plot.py  rust_backend.pyi  setup.py  utils.py  velocity_model.py
src/rust_backend/: constants.rs  datastucture.rs  injection_simulation.rs  lib.rs  utils.rs  velocity_model.rs  velocity_model_1d.rs  velocity_model_speedup.rs
visualization/: animate_snapshots.jl  plot_caprock.jl
