[project]
name = "co2-injection-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ellingsvee", email = "elling.svee@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.6",
  "nbformat>=5.10.4",
  "numpy>=2.3.3",
  "pathlib>=1.0.1",
  "plotly>=6.3.0",
  "scipy>=1.16.2",
]

[tool.maturin]
module-name = "co2_injection_simulation.rust_backend"
python-packages = ["co2_injection_simulation"]
python-source = "src"
manifest-path = "Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
